--- a/css/styles.css
+++ b/css/styles.css
@@ -48,24 +48,6 @@ img {
     cursor: pointer;
 }
 
-body {
-    font-family: 'Open Sans', sans-serif;
-}
-
-a {
-    text-decoration: none;
-    color: currentColor;
-    /* color: inherit; */
-}
-
-.address {
-    font-style: normal;
-}
-
-img {
-    display: block;
-}
-
 .container {
     width: 1200px;
     padding-left: 15px;
@@ -83,14 +65,6 @@ body {
 
 .header-nav-list .active {
     color: var(--accent-color);
-}
-
-.list {
-    list-style: none;
-}
-
-.link {
-    text-decoration: none;
 }
 
 .visually-hidden {
@@ -153,8 +127,6 @@ body {
     margin-left: auto;
 }
 
-
-
 .header-nav-link {
     font-weight: 500;
     font-size: 14px;
@@ -189,8 +161,6 @@ body {
     padding-top: 200px;
     padding-bottom: 200px;
 }
-
-.hero .container {}
 
 .hero-title {
     font-weight: 900;
@@ -377,9 +347,11 @@ body {
     display: flex;
     justify-content: center;
 }
+
 .portfolio-item-btn {
     margin-bottom: 50px;
 }
+
 .portfolio-item-btn:not(:last-child) {
     margin-right: 8px;
 }
@@ -396,11 +368,13 @@ body {
     background: var(--second-site-background);
     border-radius: 4px;
 }
+
 .portfolio-list {
     display: flex;
     flex-wrap: wrap;
     gap: 30px;
 }
+
 .portfolio-content-item {
     padding: 20px 24px;
 }
@@ -410,10 +384,6 @@ body {
     color: var(--hero-btn-color);
     background: var(--hero-btn-background);
 }
-
-/* .portfolio-link {
-    color: inherit;
-} */
 
 .portfolio-item-title {
     font-size: 18px;
@@ -428,4 +398,9 @@ body {
     line-height: 1.88;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
+}
+
+.portfolio-item {
+    background: #FFFFFF;
+    border-bottom: 1px solid #EEEEEE;
 }
